Update 'uv6g2skc7-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:40863479f90531b1edfc68980f23c25f03fcd2f5@sha256:56d3213ac1dbba6e40ebaafedf5ee222aff4afadb3edfeefb667f5792ce0e362

--- a/components/uv6g2skc7-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/uv6g2skc7-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: uv6g2skc7-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:40863479f90531b1edfc68980f23c25f03fcd2f5@sha256:56d3213ac1dbba6e40ebaafedf5ee222aff4afadb3edfeefb667f5792ce0e362
+          name: container-image
